--- a/dsearch.html
+++ b/dsearch.html
@@ -254,6 +254,17 @@
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
               </a>
+              <a href="about-peeps.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
+                <div class="d-flex align-items-center">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
+                    <span>AP</span>
+                  </div>
+                  <div>
+                    <span class="h6 d-block mb-0">About Peeps</span>
+                  </div>
+                </div>
+                <i class="material-icons">keyboard_arrow_right</i>
+              </a>
             </div>
           </div>
         </li>
@@ -280,6 +291,7 @@
                     <img src="assets/img/logo/dseek.png" alt="dsearch">
                 </div>
                 <h1 class="display-4 text-white font-alt-1 text-center mt-2">Find Freedom.</h1>
+                <span class="h1 text-white d-block" data-countdown-date="2021-7-31">221 days 09:19:00</span>
                 <p class="description" style="color: #fff;">dSearch is a search engine that allows users to search the decentralized web inside and out, without sacrificing their privacy or their rights in the process. dSearch launches July 4th, 2021.</p>
                 <div class="text-center">
                     <a href="#search-the-dweb"><i class="material-icons d-block down-arrow arrow bounce" style="color: #fff;">keyboard_arrow_down</i></a>
