--- a/dsocial.html
+++ b/dsocial.html
@@ -254,6 +254,17 @@
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
               </a>
+              <a href="about-peeps.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
+                <div class="d-flex align-items-center">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
+                    <span>AP</span>
+                  </div>
+                  <div>
+                    <span class="h6 d-block mb-0">About Peeps</span>
+                  </div>
+                </div>
+                <i class="material-icons">keyboard_arrow_right</i>
+              </a>
             </div>
           </div>
         </li>
@@ -280,6 +291,7 @@
                     <img src="assets/img/logo/dsocial.png" alt="dsocial">
                 </div>
                 <h1 class="display-4 text-white font-alt-1 text-center mt-2">Here Is Your Voice Back.</h1>
+                <span class="h1 text-white d-block" data-countdown-date="2021-3-31">221 days 09:19:00</span>
                 <p class="description" style="color: #fff;">dSocial is the world's first truly decentralized and censorship-resistant social network, where users own their data and earn for the data they curate. Reserve your username now and take your voice back.</p>
                 <div class="text-center">
                   <a href="https://signup.dsocial.network/welcome" class="btn btn-lg btn-white">Join The Social Revolution</a>
@@ -349,7 +361,7 @@
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
                 <h1 class="display-4">a social revolution is launching in...</h1>
-                <span class="h1" data-countdown-date="2021-03-30"></span>
+                <span class="h1" data-countdown-date="2021-03-31"></span>
                 <div class="text-center"><a href="https://signup.dsocial.network/welcome" class="btn btn-lg btn-white" style="border: 2px solid rgb(71, 116, 182);">Reserve Your Username Now</a></div>
               </div>
         </div>
