--- a/join.html
+++ b/join.html
@@ -47,7 +47,40 @@
                     <img alt="Insight" src="assets/img/logo/peepsLogo.png">
                 </a>
             </div>
-            <h1 class="h2 text-center">Join The Patriots Club</h1>
+            <h1 class="h2 text-center">Join I AM Freedom.</h1>
+            <!-- subscription type start-->
+            <div class="row" id="subscriber-type">
+                <div class="col-sm-4">
+                  <div class="form-group">
+                    <div class="custom-control custom-radio mb-1">
+                      <input type="radio" id="Leader" name="amountRadio" class="custom-control-input"
+                        value="5" checked="checked">
+                      <label class="custom-control-label" for="Leader">Leader ($5/month)</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-4">
+                  <div class="form-group">
+                    <div class="custom-control custom-radio mb-1">
+                      <input type="radio" id="Hero" name="amountRadio" class="custom-control-input"
+                        value="10">
+                      <label class="custom-control-label" for="Hero">Hero ($10/month)</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-4">
+                  <div class="form-group">
+                    <div class="custom-control custom-radio mb-1">
+                      <input type="radio" id="Patriot" name="amountRadio" class="custom-control-input"
+                        value="20">
+                      <label class="custom-control-label" for="Patriot">Patriot ($20/month)</label>
+                    </div>
+                  </div>
+                </div>
+                
+              </div>
+              <!-- subscription type end-->
+
             <!-- form start-->
             <div class="row">
                 <div class="col-sm-6">
@@ -118,7 +151,7 @@
               </div>
             </div>
             <div class="become-member" style="margin: 20px 0;">
-                <button class="btn btn-lg btn-primary btn-block mb-1" onclick="peepsmember()">Become a Peeps Member</button>
+                <button class="btn btn-lg btn-primary btn-block mb-1" onclick="peepsmember()">Finalize Membership</button>
             </div>
             <!-- form end-->
             
