--- a/peeros.html
+++ b/peeros.html
@@ -254,6 +254,17 @@
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
               </a>
+              <a href="about-peeps.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
+                <div class="d-flex align-items-center">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
+                    <span>AP</span>
+                  </div>
+                  <div>
+                    <span class="h6 d-block mb-0">About Peeps</span>
+                  </div>
+                </div>
+                <i class="material-icons">keyboard_arrow_right</i>
+              </a>
             </div>
           </div>
         </li>
@@ -276,10 +287,11 @@
       <div class="row justify-content-center">
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
-                <!-- <div class="logo-rounded ">
-                    <img src="assets/img/logo/dsocial.png" alt="dsocial">
-                </div> -->
+                <div class="logo-rounded ">
+                    <img src="assets/img/logo/peeros.png" alt="peeros">
+                </div>
                 <h1 class="display-4 text-white font-alt-1 text-center mt-2">The Decentralized OS.</h1>
+                <span class="h1 text-white d-block" data-countdown-date="2022-01-01">221 days 09:19:00</span>
                 <p class="description" style="color: #fff;">PeerOS is a completely reimagined version of Android for desktop and mobile devices, that utilizes various peer-to-peer technologies and a distributed file system to protect the privacy and rights of its users. PeerOS launches January 1st, 2022.</p>
                 <div class="text-center">
                     <a href="https://github.com/peepsx/peeros-whitepaper" class="btn btn-lg btn-white">Read PeerOS Introduction</a>
