--- a/dnames.html
+++ b/dnames.html
@@ -254,6 +254,17 @@
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
               </a>
+              <a href="about-peeps.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
+                <div class="d-flex align-items-center">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
+                    <span>AP</span>
+                  </div>
+                  <div>
+                    <span class="h6 d-block mb-0">About Peeps</span>
+                  </div>
+                </div>
+                <i class="material-icons">keyboard_arrow_right</i>
+              </a>
             </div>
           </div>
         </li>
@@ -280,6 +291,7 @@
                     <img src="assets/img/logo/dnames.png" alt="dname">
                 </div>
                 <h1 class="display-4 text-white font-alt-1 text-center mt-2">Decentralized Domains.</h1>
+                <span class="h1 text-white d-block" data-countdown-date="2021-02-01">221 days 09:19:00</span>
                 <p class="description" style="color:#fff;">dNames is the dWeb's first domain registrar for decentralized top-level domains (dTLDs) like .dcom, .dnet, .dorg, .dweb and more. dNames launches January 15th, 2021.</p>
                 <div class="text-center">
                     <a href="#search" class="btn btn-lg btn-white">Take A Test Drive </a>
