--- a/dwallet.html
+++ b/dwallet.html
@@ -254,6 +254,18 @@
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
               </a>
+              <a href="about-peeps.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
+                <div class="d-flex align-items-center">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
+                    <span>AP</span>
+                  </div>
+                  <div>
+                    <span class="h6 d-block mb-0">About Peeps</span>
+                  </div>
+                </div>
+                <i class="material-icons">keyboard_arrow_right</i>
+              </a>
+
             </div>
           </div>
         </li>
