--- a/join.html
+++ b/join.html
@@ -243,7 +243,7 @@
 
   <script>
 
-      var amount = 5;
+      var amount_ = 5;
       var checkout_ID_USD = 'P-7MG6534019154735TL4FSIZI';
 
      
