--- a/donate.html
+++ b/donate.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta http-equiv="refresh" content="0; URL=https://arisen.church/donate" />
   <meta charset="utf-8">
   <title>Donate | Peeps - decentralize everything.</title>
   <meta name="title" content="Join The Patriots Club | Peeps - decentralize everything.">
