--- a/join.html
+++ b/join.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
     <head>
+        <meta http-equiv="refresh" content="0; URL=https://arisen.church/join" />
         <meta charset="utf-8">
         <title>Join the Club | Peeps - decentralize everything.</title>
         <meta name="title" content="Join the Club | Peeps - decentralize everything.">
