--- a/fund.html
+++ b/fund.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Support Our Development | Peeps - decentralize everything.</title>
+  <title>Help Fund The Fight | Peeps - decentralize everything.</title>
   <meta name="title" content="Support Our Development | Peeps - decentralize everything.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="People from around the world support our mission to bring freedom back to the Internet and for the price of a cup of coffee, you can too.">
+  <meta name="description" content="At Peeps, our mission to create an Internet that enables freedom depends on the many patriots who contribute to our development efforts. Learn how you can help fund our fight against big tech.">
   <meta name="keywords" content="">
   <!-- Favicon -->
   <link rel="shortcut icon" href="assets/img/logo/peepfab.png">
@@ -23,7 +23,7 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
+    
       gtag('config', 'G-08BK2XMZTB');
   </script>
 
@@ -283,16 +283,16 @@
    
 
 <!--------------------------------- Header Block End --------------------------->
-  <!-------------------------CTA Block Start------------------------>
-  <section class="controls-inside p-0 controls-light bg-dark" >
+   <!-------------------------CTA Block Start------------------------>
+   <section class="controls-inside p-0 controls-light bg-dark" >
     <div class="height-70 carousel-cell py-3 py-md-4 height-40 overlay-dark">
       <img class="bg-image opacity-50" src="assets/img/The Grand Canyon.jpg" alt="The Grand Canyon">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6">
             <h1 class="display-4 text-white">The fight is on for our online freedom.</h1>
-            <p class="lead text-light">At Peeps, our mission to create an Internet that enables freedom depends on the many patriots who contribute to our development efforts. Without people like you, Peeps simply wouldn't be possible.</p>
-            <a href="#support-is-growing" class="btn btn-primary btn-lg">Learn More</a>
+            <p class="lead text-light">The I AM Freedom movement is about creating an Iternet that enables freedom and it depends on the many patriots like you who continue to join and contribute to this monumental fight.</p>
+            <a href="#member-levels" class="btn btn-primary btn-lg">View Member Levels</a>
           </div>
         </div>
       </div>
@@ -306,16 +306,16 @@
           <div class="card shadow-lg">
             <div class="card-body py-4">
               <span class="d-block h1 display-4">32</span>
-              <p>The number of developers, visionaries and advisors on our growing team at Peeps.</p>
-              <a href="our-team.html">Meet some of our team</a>
+              <p>The number of developers, visionaries and advisors contributing to the I AM Freedom mission at the Peeps Institute.</p>
+              <a href="https://peepsx.com">Learn more about pees</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4 d-lg-flex">
           <div class="card shadow-lg">
             <div class="card-body py-4">
-              <span class="d-block h1 display-4">$100,000+</span>
-              <p>The amount of money we have spent on domains, servers, developers and more over the past 12 months, thanks to our growing number of supporters.</p>
+              <span class="d-block h1 display-4">$400,000</span>
+              <p>The amount of money contributed towards domains, servers, developers, legal fees and more over the past 36 months.</p>
               <a href="donate.html">Donate now</a>
             </div>
           </div>
@@ -323,9 +323,9 @@
         <div class="col-lg-4 d-lg-flex">
           <div class="card shadow-lg">
             <div class="card-body py-4">
-              <span class="d-block h1 display-4">$5/mo.</span>
-              <p>The cost to become a member of our Patriots Club, a monthly supporter and insider to all of the awesome things we're building at Peeps Labs.</p>
-              <a href="join.html">Join the Patriots Club</a>
+              <span class="d-block h1 display-4">$20/mo.</span>
+              <p>The cost to become a "Patriot" level member of the I AM Freedom club, and a monthly supporter of our fight against big tech.</p>
+              <a href="#member-levels">View member levels</a>
             </div>
           </div>
         </div>
@@ -335,76 +335,124 @@
   </section>
 
   <!------------------------- CTA Block End------------------------>
-  <!------------------------- CONTENT BLOCK 1 TEMPLATE Start (#support-is-growing)------------------------>
-  <!-- <section class="height-100 bg-white" id="support-is-growing">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-xl-8 col-lg-8 col-md-8 center-text">
-          <div class="">
-            <h1 class="display-4">our support is growing.</h1>
-            <div class="progress" style="height: 50px;">
-            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100000">
-                    <div class="d-flex justify-content-between">
-                      <span>10%</span>
-                    </div>
-                  </div>
-            </div>
-            <div id="myProgress">
-              <div id="myBar">10%</div>
-            </div>
-            <h2>We have raised "total-amount-raised" of our $100,000 goal.</h2>
-            <a href="#become-a-member"><i
-                class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
-          </div>
+  <!------------------------- Block A------------------------>
+  <section class="bg-white">
+    <!-- <img src="#" alt="Image" class="bg-i   mage"> -->
+    <div class="container height-md-30">
+      <div class="row">
+        <div class="col-md-8 col-lg-7 col-xl-6">
+          <nav aria-label="breadcrumb">
+            <!-- <ol class="breadcrumb p-0 bg-transparent">
+              <li class="breadcrumb-item">
+                <a href="index.html">Overview</a>
+              </li>
+              <li class="breadcrumb-item">
+                <a href="pages-inner.html">Inner Pages</a>
+              </li>
+              <li class="breadcrumb-item active" aria-current="page">
+                Member Levels
+              </li>
+            </ol> -->
+          </nav>
+          <h1 class="display-4">
+            Pricing
+          </h1>
+          <p class="lead mb-0">
+            To become a member of the I AM Freedom club, you have to choose from one of the three support levels below.
+          </p>
         </div>
       </div>
     </div>
-  </section> -->
-
-  <!------------------------- CONTENT BLOCK 1 TEMPLATE End------------------------>
-  <!------------------------- CONTENT BLOCK 2 TEMPLATE Start (#become-a-member)------------------------>
-  <section class="height-100 bg-light" id="become-a-member">
+  </section>
+  <section class="pt-md-0 mt-minus-3">
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-xl-8 col-lg-8 col-md-8 center-text">
-          <div class="">
-            <h1 class="display-4">become a member.</h1>
-            <p class="description">Signing up to become a member places you in our Patriots Club and will give you an
-              inside look into all of the projects that we're developing at PeepsLabs. For just $5 per month, you can
-              support our work and get daily updates straight from our development team.</p>
-            <div class="text-center">
-              <a href="join.html" class="btn btn-lg btn-white">Become A Member</a>
+      <div class="row">
+        <div class="col-md-4 d-flex">
+          <div class="card flex-fill text-center shadow">
+            <div class="card-body py-4">
+              <div class="mb-3">
+                <span class="h4 d-block">Leader</span>
+                <div class="d-flex justify-content-center align-items-center">
+                  <span class="h5 mb-0">$</span>
+                  <span class="h1 display-3 mb-0">5</span>
+                </div>
+                <span class="text-muted">Per Month.</span>
+              </div>
+              <ul class="list-unstyled lead mb-3">
+                <li class="mt-1">Regular Insider Updates</li>
+                <li class="mt-1">I AM Freedom Sticker</li>
+                <li class="mt-1">Preview Apps Before Release</li>
+              </ul>
+              <a href="https://peepsx.com/join.html" class="btn btn-primary">Join Now</a>
             </div>
-            <a href="#donate"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
+            <div class="card-footer">
+              <span class="text-small">* Cancel at anytime.</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 d-flex">
+          <div class="card flex-fill text-center shadow-lg">
+            <span class="badge badge-md badge-success position-absolute"><i class="material-icons">star</i> Best Value</span>
+            <div class="card-body py-4">
+              <div class="mb-3">
+                <span class="h4 d-block">Hero</span>
+                <div class="d-flex justify-content-center align-items-center">
+                  <span class="h5 mb-0">$</span>
+                  <span class="h1 display-3 mb-0">10</span>
+                </div>
+                <span class="text-muted">Per Month.</span>
+              </div>
+              <ul class="list-unstyled lead mb-3">
+                <li class="mt-1">Includes Leader Plus</li>
+                <li class="mt-1">Daily Insider Updates</li>
+              </ul>
+              <a href="https://peepsx.com/join.html" class="btn btn-primary">Join Now</a>
+            </div>
+            <div class="card-footer">
+              <span class="text-small">* Cancel at anyime.</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 d-flex">
+          <div class="card flex-fill text-center shadow">
+            <div class="card-body py-4">
+              <div class="mb-3">
+                <span class="h4 d-block">Patriot</span>
+                <div class="d-flex justify-content-center align-items-center">
+                  <span class="h5 mb-0">$</span>
+                  <span class="h1 display-3 mb-0">20</span>
+                </div>
+                <span class="text-muted">Per Month.</span>
+              </div>
+              <ul class="list-unstyled lead mb-3">
+                <li class="mt-1">Includes Hero Plus</li>
+                <li class="mt-1">"I AM Freedom" T-Shirt</li>
+              </ul>
+              <a href="https://peepsx.com/join.html" class="btn btn-primary">Join Now</a>
+            </div>
+            <div class="card-footer">
+              <span class="text-small">* Cancel at anytime.</span>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-
-  <!------------------------- CONTENT BLOCK 2 TEMPLATE End------------------------>
-  <!------------------------- CONTENT BLOCK 1 TEMPLATE Start (#donate)------------------------>
-  <section class="height-100 bg-white" id="donate">
+  <!------------------------- Block A End------------------------>
+  <!------------------------- Block B------------------------>
+  <section class="height-70 bg-gradient">
+    <img src="assets/img/american-family.jpg" alt="Image" class="bg-image opacity-60">
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-xl-8 col-lg-8 col-md-8 center-text">
-          <div class="">
-            <h1 class="display-4">or simply donate.</h1>
-            <p class="description">While donations are not yet tax-deductible (we're working on it), they allow us to
-              continue our development of technologies and apps like dSocial that preserve your freedom of speech on the
-              Internet, as well as various other freedoms that are under constant attack by tech companies from around
-              the world. Simply put, without people like you, our fight isn't possible.</p>
-            <div class="text-center">
-              <a href="donate.html" class="btn btn-lg btn-white">Donate Now</a>
-            </div>
-
-          </div>
+      <div class="row text-center">
+        <div class="col">
+          <h1 class="display-2 font-alt-1 text-white">Beyond Freedom.</h1>
+          <span class="lead d-block mb-3 text-white">Peer-to-peer innovations like the dWeb, prove that eachy goes far beyond just online freedom. You can help support our continued fight for faith, family, justice nad life in America by graciously donating to our growing efforts across America by clicking below.</span>
+          <a href="https://arisen.church/donate.html" class="btn btn-lg btn-primary">Donate now</a>
         </div>
       </div>
     </div>
   </section>
-
-  <!------------------------- CONTENT BLOCK 1 TEMPLATE End------------------------>
+  <!------------------------- Block B End------------------------>
 
   <!--------------------------- Footer Block Start-------------------->
   <footer class="spacer-y-3 bg-white">
