--- a/fund.html
+++ b/fund.html
@@ -336,7 +336,7 @@
 
   <!------------------------- CTA Block End------------------------>
   <!------------------------- Block A------------------------>
-  <section class="bg-white">
+  <section class="bg-white" id="member-levels">
     <!-- <img src="#" alt="Image" class="bg-i   mage"> -->
     <div class="container height-md-30">
       <div class="row">
@@ -355,7 +355,7 @@
             </ol> -->
           </nav>
           <h1 class="display-4">
-            Pricing
+            Member Levels
           </h1>
           <p class="lead mb-0">
             To become a member of the I AM Freedom club, you have to choose from one of the three support levels below.
