--- a/dwallet.html
+++ b/dwallet.html
@@ -425,6 +425,7 @@
             <p class="powered-by">
               Powered by <a href="https://peepsx.com" target="_blank"><img src="assets/img/logo/arisen.png" alt="peeps-logo"></a> and Made in <img src="assets/img/flag-us.svg" alt="United States" class="btn-image">
             </p>
+            <p><a href="legal.html" class="privacy-pol">Privacy Policy*</a></p>
             <p>&#xA9; 2018-2021 Arisen Ministries and The Peeps Institute. All rights reserved.</p>
 
             <ul class="list-social-links">
