modified payment modal and table

--- a/table.html
+++ b/table.html
@@ -9,7 +9,7 @@
         content="Arisen Ministries is leading a digital crusade around the world to help preserve our God-given, inalienable rights, as well as a growing fight for justice, life, faith and family.">
     <meta name="keywords" content="arisen church, arisen ministries">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/logo/arisen.png">
+    <link rel="shortcut icon" href="assets/img/logo/peepfab.png">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i%7cPermanent+Marker"
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <h3 class="donation-head">Donation Details</h3>
+    <h3 class="donation-head">Subscribers Details</h3>
     <table id="tabledata" class="backend-data">
         <tr>
             <th>S.No</th>
