--- a/join.html
+++ b/join.html
@@ -519,13 +519,12 @@
                         "subscriptionStatus": subsstatus
                     }
                     axios.post('https://payments.peepsx.com/users/saveuser', objdata).then((response) => {
-                        if (response) {
-                            // swal({ title: "You are peeps member now.", icon: "success" });
+                        if (response.data.status) {
                             localStorage.clear()
                             window.location.replace('welcome.html')
 
                         } else {
-                            swal({ title: "Something went wrong,Please try again!", icon: "warning" });
+                            swal({ title:response.data.message, icon: "warning" });
                         }
                     }).catch((error) => {
                         console.log(error)
