changed title in tables.html

--- a/table.html
+++ b/table.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Arisen Ministries | Fighting For Freedom, Faith and Family.</title>
+    <title>Peeps | decentralize everything.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Arisen Ministries is leading a digital crusade around the world to help preserve our God-given, inalienable rights, as well as a growing fight for justice, life, faith and family.">
