--- a/peeps-story.html
+++ b/peeps-story.html
@@ -274,6 +274,9 @@
         <li class="nav-item">
           <a class="nav-link h5" href="fund.html">Support Us</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link h5" href="https://peepsology.medium.com/">Blog</a>
+        </li>
       </ul>
     </div>
   </div>
