changed bitshare link in header

--- a/blocks.html
+++ b/blocks.html
@@ -49,7 +49,7 @@
               <a href="https://docs.arisen.network" class="nav-link pr-2">Docs</a>
             </li>
             <li class="nav-item rix-price-box">
-              <a href="https://wallet.bitshares.org/#/asset/RSN" target="_blank" class="nav-link pr-2">RIX Value: <span id="rix-price" class="rsn-price badge badge-success"></span>
+              <a href="https://wallet.bitshares.org/#/asset/ARISEN" target="_blank" class="nav-link pr-2">RIX Value: <span id="rix-price" class="rsn-price badge badge-success"></span>
 </a>
             </li>
           </ul>
